--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,189 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.msg {
+  margin-top: -40px;
+  font-weight: bold;
+  font-size: 24px;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+.items-list-wrap {
+  width: 420px;
+  height: 420px;
+  margin: auto;
+  border-radius: 50px;
+  box-shadow: 5px 5px 20px black;
+  mix-blend-mode: soft-light;
+  padding: 1px;
+  display: flex;
+  flex-direction: column;
+  padding-bottom: 65px;
+}
+
+.item-list-wrap{
+  height: 100%;
+  overflow: auto;
+}
+
+.items-list-header {
+  margin: auto;
+}
+
+.item-wrap {
+  width: 360px;
+  min-height: 45px;
+  mix-blend-mode: soft-light;
+  margin-left: 30px;
+  border-left-style: solid;
+  border-left-width: 7px;
+  border-left-color: rgb(0, 0, 0);
+  box-shadow: 1px 1px 5px gray;
+  margin-bottom: 10px;
+  display: flex;
+  align-items: center;
+  padding: 5px 0px;
+  margin-top: 2px;
+  position: relative;
+}
+
+.todo-text-with-checkbox {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.edit-delete-icons {
+  display: flex;
+}
+
+.edit-delete-icons svg {
+  margin-right: 7px;
+}
+
+.check-box {
+  width: 25px;
+  height: 25px;
+}
+
+.todo {
+  width: 100%;
+}
+
+.todo label{
+  max-width: 280px;
+  overflow-wrap: break-word;
+}
+
+label {
+  color: black;
+}
+
+.up-arrow {
+  margin-left: 330px;
+  padding-top: 10px;
+  margin-top: -44px;
+}
+
+.text-field {
+  width: 350px;
+  height: 45px;
+  border-radius: 50px;
+  margin-left: -4px;
+  box-shadow: 1px 1px 5px gray;
+  border: none;
+  padding-left: 20px;
+  background-color: black;
   color: white;
+  margin: 0px;
+  outline: none;
 }
 
-.App-link {
-  color: #61dafb;
+.scroll-bar {
+  overflow: scroll;
+  overflow-x: hidden;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.item-list-wrap::-webkit-scrollbar {
+  display: none;
+}
+
+.add-todos-wrap {
+  position: fixed;
+  bottom: 48px;
+  margin-left: 28px;
+}
+
+.edit-btn {
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  outline: none;
+}
+
+.delete-btn {
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  outline: none;
+}
+
+.add-btn {
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  outline: none;
+}
+
+.edit-field {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  margin-left: 10px;
+}
+
+.save-cancel-btns {
+  display: flex;
+}
+
+.save-cancel-icons svg {
+  margin-right: 5px;
+}
+
+.edit-todo {
+  width: 100%;
+  background-color: transparent;
+  outline: none;
+  border: none;
+}
+
+.save-btn {
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  outline: none;
+}
+
+.cancel-btn {
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  outline: none;
+}
+
+.edit-wrap {
+  display: flex;
+  width: 360px;
+  min-height: 45px;
+  mix-blend-mode: soft-light;
+  border-left-style: solid;
+  border-left-width: 7px;
+  border-left-color: rgb(0, 0, 0);
+  box-shadow: 1px 1px 5px gray;
+  display: flex;
+  align-items: center;
+  padding: 5px 0px;
+  position: absolute;
+  top: 0px;
+  left: -7px;
 }
